carousel bug squash

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -707,6 +707,8 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+/******** CAROUSEL *********/
+
 .cstud__carousel {
   width: 50%;
   display: flex;
@@ -744,18 +746,25 @@
   border-left: 25px solid #005cc5;
 }
 
-.cstud__item {
-  display: none;
-  flex-shrink: 0;
-  position: relative;
+#carousel {
   height: 600px;
   width: 300px;
-  color: black;
+  flex-shrink: 0;
+}
+
+/* .cstud__item is wrapped in #carousel */
+.cstud__item {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: relative;
+  color: var(--black);
+  text-decoration: none;
   background-image: url(../images/phone.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
-  animation: slideIn 1s ease-out 1ms;
+  animation: slideIn 1s;
 }
 
 @keyframes slideIn {
@@ -768,10 +777,6 @@
     opacity: 1;
     transform: translateX(0%);
   }
-}
-
-.visible {
-  display: initial;
 }
 
 .cstud__person,
@@ -849,7 +854,7 @@
     margin-top: 40px;
   }
 
-  .cstud__item {
+  #carousel {
     height: 400px;
   }
 
